# Recipe-Recommendations

./: README.md  README.rst  data.dvc  pyproject.toml  test.py
.dvc/: config
figures/: jupyter_notebook_graph_output.html  raw_code_graph_output.html
recipe-recommendations/: recipe-recommendations.py  test.py
recipe_recommendations/: plot.py  raw_code.py  recipe_recommendations.py
recipe_recommendations/.ipynb_checkpoints/: Recipe Recommendations-checkpoint.ipynb
tests/: test_recipe_recommendations.py
