[tool.poetry]
name = "recipe-recommendations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
pandas = "^1.2.0"
sklearn = "^0.0"
plotly = "^4.14.3"
networkx = "^2.5"
streamlit = "^0.74.1"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
